--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/alimooo1/Music-Player/issues"
   },
-  "homepage": "https://github.com/alimooo1/Music-Player#readme"
+  "homepage": "https://github.com/alimooo1/Music-Player#readme",
+  "devDependencies": {
+    "webpack": "^5.82.1",
+    "webpack-cli": "^5.1.1"
+  }
 }
