--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sass-loader": "^13.2.2",
     "style-loader": "^3.3.2",
     "ts-loader": "^9.4.2",
+    "url-loader": "^4.1.1",
     "webpack": "^5.82.1",
     "webpack-cli": "^5.1.1"
   },
